--- a/src/app/modules/arena/components/arena-card/arena-card.component.html
+++ b/src/app/modules/arena/components/arena-card/arena-card.component.html
@@ -29,12 +29,12 @@
 
   <div class="card-footer d-flex justify-content-between">
     <div>
-      <span class="me-1 badge badge-glow" ngbTooltip="{{ 'Time' | translate }}">
+      <span class="me-1 badge" ngbTooltip="{{ 'Time' | translate }}">
         <kep-icon class="font-small-4" name="challenge-time"></kep-icon>
         {{ arena.timeSeconds }}
       </span>
 
-      <span class="badge badge-glow" ngbTooltip="{{ 'Questions' | translate }}">
+      <span class="badge" ngbTooltip="{{ 'Questions' | translate }}">
         <kep-icon class="font-small-4" name="challenge-task"></kep-icon>
         {{ arena.questionsCount }}
       </span>
