--- a/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.html
+++ b/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.html
@@ -5,12 +5,12 @@
   </div>
 
   <div class="card-body">
-    <span ngbTooltip="{{ 'Time' | translate }}" class="me-1 badge bg-primary bg-primary-darken badge-glow">
+    <span ngbTooltip="{{ 'Time' | translate }}" class="me-1 badge bg-primary bg-primary-darken">
       <kep-icon size="small-3" name="challenge-time"></kep-icon>
       {{ challengeCall.timeSeconds }}
     </span>
 
-    <span ngbTooltip="{{ 'Questions' | translate }}" class="mb-50 badge bg-primary bg-primary-darken badge-glow">
+    <span ngbTooltip="{{ 'Questions' | translate }}" class="mb-50 badge bg-primary bg-primary-darken">
       <kep-icon size="small-3" name="challenge-task"></kep-icon>
       {{ challengeCall.questionsCount }}
     </span>
