--- a/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.html
+++ b/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.html
@@ -1,6 +1,6 @@
 <user-popover [customContent]="true" [username]="user.username">
   <div>
-    <span class="badge badge-pill badge-glow bg-{{ user.rankTitle | challengesRankColor }}">
+    <span class="badge badge-pill bg-{{ user.rankTitle | challengesRankColor }}">
       {{ user.rankTitle }}
     </span>
     {{ user.username }}
