--- a/src/app/modules/code-rush/components/code-rush-countdown/code-rush-countdown.component.html
+++ b/src/app/modules/code-rush/components/code-rush-countdown/code-rush-countdown.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-danger bg-darken-4 badge-glow">
+<div class="card bg-danger bg-darken-4">
   <div class="text-center card-title mt-2">
     <h3 class="text-white">
       Code Rush #{{ codeRush.id }}
