--- a/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
+++ b/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
@@ -25,7 +25,7 @@
                 <contestant-view [user]="contestant.user" [team]="contestant.team"></contestant-view>
               </td>
               <td class="text-center">
-                <span class="badge badge-glow bg-primary">
+                <span class="badge bg-primary">
                   {{ contestant.points }}
                 </span>
               </td>
