--- a/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
+++ b/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
@@ -39,11 +39,11 @@
 
     <div class="card-footer justify-content-between d-flex">
       <div>
-        <span class="badge badge-glow bg-primary">
+        <span class="badge bg-primary">
           <kep-icon size="small-1" name="problem" type="duotone" class=""></kep-icon>
           {{ contest.problemsCount }}
         </span>
-        <span class="ms-1 badge badge-glow bg-primary">
+        <span class="ms-1 badge bg-primary">
           {{ contest.type }}
         </span>
       </div>
