--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -30,7 +30,7 @@
                 <contestant-view [user]="contestant"></contestant-view>
               </td>
               <td class="text-center">
-                <span class="badge badge-glow bg-primary">
+                <span class="badge bg-primary">
                   {{ contestant.points }}
                 </span>
               </td>
@@ -173,7 +173,7 @@
                       </td>
                       @if (contest.hasBalls()) {
                         <td>
-                          <span class="badge bg-success badge-glow">
+                          <span class="badge bg-success">
                             {{ _contestProblem.ball }}
                           </span>
                         </td>
