--- a/src/app/modules/courses/components/course-card/course-card.component.html
+++ b/src/app/modules/courses/components/course-card/course-card.component.html
@@ -62,7 +62,7 @@
     </div>
     <hr>
     @if (course.inThePipeline) {
-      <span class="badge bg-info badge-glow">
+      <span class="badge bg-info">
         <i data-feather="tool"></i> {{ 'COURSES.IN_THE_PIPELINE' | translate }}
       </span>
     } @else {
