--- a/src/app/modules/courses/pages/dictionary/dictionary.component.html
+++ b/src/app/modules/courses/pages/dictionary/dictionary.component.html
@@ -33,7 +33,7 @@
                   @for (keyword of courseDictionary; track keyword) {
                     <tr>
                       <td>
-                        <span class="badge badge-glow bg-primary">
+                        <span class="badge bg-primary">
                           {{ keyword.keyword }}
                         </span>
                       </td>
