--- a/src/app/modules/problems/components/hack-attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/hack-attempts-table/table/table.component.html
@@ -48,7 +48,7 @@
             </a>
           </td>
           <td>
-            <span class="badge badge-glow badge-{{ hackAttempt | hackAttemptVerdictColor }}">
+            <span class="badge badge-{{ hackAttempt | hackAttemptVerdictColor }}">
               {{ hackAttempt.verdictTitle }} @if (hackAttempt.hackType) {
               <span> | {{ hackAttempt.hackType }}</span>
             }
