--- a/src/app/modules/problems/components/problem-body/problem1953/problem1953.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1953/problem1953.component.html
@@ -2,6 +2,6 @@
   [ngbTooltip]="msg"
   [style.left.px]="left"
   [style.top.px]="top"
-  class="badge bg-primary badge-glow">
+  class="badge bg-primary">
   Hover
 </span>
