--- a/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
+++ b/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
@@ -6,15 +6,15 @@
   </div>
 
 <!--  <div class="meta-info d-flex gap-1">-->
-<!--    <span class="badge bg-info badge-glow">-->
+<!--    <span class="badge bg-info">-->
 <!--      {{ selectedAvailableLang.timeLimit || problem.timeLimit }} {{ 'MS' | translate }}-->
 <!--    </span>-->
 
-<!--    <span class="badge bg-primary badge-glow">-->
+<!--    <span class="badge bg-primary">-->
 <!--      {{ selectedAvailableLang.memoryLimit || problem.memoryLimit }} {{ 'MB' | translate }}-->
 <!--    </span>-->
 
-<!--    <span class="badge bg-{{ problem.difficulty | problemDifficultyColor }} badge-glow">-->
+<!--    <span class="badge bg-{{ problem.difficulty | problemDifficultyColor }}">-->
 <!--      {{ problem.difficultyTitle }}-->
 <!--    </span>-->
 
