--- a/src/app/modules/problems/pages/problem/problem-og-image/problem-og-image.component.html
+++ b/src/app/modules/problems/pages/problem/problem-og-image/problem-og-image.component.html
@@ -6,7 +6,7 @@
 
     <span
       ngbTooltip="{{ 'DIFFICULTY' | translate }}"
-      class="badge-pill badge-glow badge bg-{{ problem.difficulty | problemDifficultyColor }}">
+      class="badge-pill badge bg-{{ problem.difficulty | problemDifficultyColor }}">
       {{ problem.difficultyTitle | translate }}
     </span>
 
