--- a/src/app/modules/problems/pages/problem/problem-sidebar/problem-sidebar.component.html
+++ b/src/app/modules/problems/pages/problem/problem-sidebar/problem-sidebar.component.html
@@ -14,7 +14,7 @@
       <div class="sidebar-type">
         <button
           rippleEffect
-          class="btn btn-sm btn-primary bg-primary badge-glow"
+          class="btn btn-sm btn-primary bg-primary"
           (click)="sidebarType=(sidebarType == SidebarType.INFO ? SidebarType.STATISTICS : SidebarType.INFO)">
           @if (sidebarType == SidebarType.INFO) {
             {{ 'Statistics' | translate }}
