--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -1,6 +1,6 @@
 <div class="text-center">
   <div [@fadeInUpOnEnter]
-       class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
+       class="avatar avatar-lg bg-primary p-50 m-0 mb-1">
     <div class="text-white">
       <div class="avatar-content">
         <kep-icon class="font-medium-5" name="problem"></kep-icon>
