--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -102,7 +102,7 @@
         </td>
 
         <td class="text-center">
-          <span class="badge badge-glow bg-{{ problem.difficulty | problemDifficultyColor }}">
+          <span class="badge bg-{{ problem.difficulty | problemDifficultyColor }}">
             {{ problem.difficultyTitle | translate }}
           </span>
         </td>
