--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -60,12 +60,12 @@
               <td class="text-center text-danger">{{ problemsRating.hard }}</td>
               <td class="text-center text-dark">{{ problemsRating.extremal }}</td>
               <td class="text-center">
-                <span class="badge bg-primary badge-glow">
+                <span class="badge bg-primary">
                   {{ problemsRating.solved }}
                 </span>
               </td>
               <td class="text-center">
-                <span class="badge bg-success-transparent badge-glow">
+                <span class="badge bg-success-transparent">
                   {{ problemsRating.rating }}
                 </span>
               </td>
