--- a/src/app/modules/problems/pages/statistics/section-facts/section-facts.component.html
+++ b/src/app/modules/problems/pages/statistics/section-facts/section-facts.component.html
@@ -189,7 +189,7 @@
           </div>
         </div>
         <div [ngbTooltip]="tipContent" *ngIf="facts?.solvedWithSingleAttempt">
-          <span class="badge bg-primary badge-glow">
+          <span class="badge bg-primary">
             {{ facts.solvedWithSingleAttempt }}
           </span>
         </div>
