--- a/src/app/modules/problems/pages/study-plan/study-plan.component.html
+++ b/src/app/modules/problems/pages/study-plan/study-plan.component.html
@@ -246,7 +246,7 @@
                           </div>
                           <div class="problem-difficulty">
                             <span
-                              class="badge badge-glow badge-pill badge-{{ problem.difficulty | problemDifficultyColor }}">
+                              class="badge badge-pill badge-{{ problem.difficulty | problemDifficultyColor }}">
                               {{ problem.difficultyTitle | translate }}
                             </span>
                           </div>
