--- a/src/app/modules/projects/components/project-info-card/project-info-card.component.html
+++ b/src/app/modules/projects/components/project-info-card/project-info-card.component.html
@@ -11,7 +11,7 @@
         <kep-icon name="technology-2"/>
         {{ 'Level' | translate }}
       </div>
-      <span class="badge badge-pill bg-success badge-glow">
+      <span class="badge badge-pill bg-success">
         {{ project.levelTitle }}
       </span>
     </div>
