--- a/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prize-card/user-competition-prize-card.component.html
+++ b/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prize-card/user-competition-prize-card.component.html
@@ -15,7 +15,7 @@
     } @else if (competitionPrize.prizeType == 'TELEGRAM_PREMIUM') {
       <img class="mt-1" src="https://upload.wikimedia.org/wikipedia/commons/0/08/Telegram_Premium.png" width="48"
            height="48">
-      <span class="badge bg-primary badge-glow">
+      <span class="badge bg-primary">
         {{ competitionPrize.telegramPremiumPeriod }} month
       </span>
     } @else if (competitionPrize.prizeType == 'KEPCOIN') {
