--- a/src/app/modules/users/pages/user-profile/user-info/user-info.component.html
+++ b/src/app/modules/users/pages/user-profile/user-info/user-info.component.html
@@ -73,7 +73,7 @@
             {{ 'USER_INFO.CODEFORCES' | translate }}:
           </h5>
           <p class="card-text mb-0">
-            <span class="badge badge-glow bg-warning">
+            <span class="badge bg-warning">
               {{ userSocial.codeforcesHandle }}
             </span>
             <img class="ms-1" [src]="userSocial.codeforcesBadge">
