--- a/src/app/modules/users/pages/users/users.component.html
+++ b/src/app/modules/users/pages/users/users.component.html
@@ -195,12 +195,12 @@
               </span>
             </td>
             <td class="text-center">
-              <span class="badge bg-primary badge-pill badge-glow">
+              <span class="badge bg-primary badge-pill">
                 {{ user.skillsRating.value }}
               </span>
             </td>
             <td class="text-center">
-              <span class="badge bg-info badge-pill badge-glow">
+              <span class="badge bg-info badge-pill">
                 {{ user.activityRating.value }}
               </span>
             </td>
@@ -225,7 +225,7 @@
               <kepcoin [value]="user.kepcoin"></kepcoin>
             </td>
             <td class="text-center">
-              <span class="badge bg-success-transparent badge-glow">
+              <span class="badge bg-success-transparent">
                 {{ user.lastSeen }}
               </span>
             </td>
