--- a/src/app/shared/components/user-popover/user-avatar-popover/user-avatar-popover.component.html
+++ b/src/app/shared/components/user-popover/user-avatar-popover/user-avatar-popover.component.html
@@ -49,7 +49,7 @@
               <i [data-feather]="'activity'"></i> {{ 'MENU.CHALLENGES' | translate }}
             </h6>
             <p class="mb-0 mt-1">
-              <span class="badge bg-success badge-glow">{{ userRatings.challengesRankTitle }}</span>
+              <span class="badge bg-success">{{ userRatings.challengesRankTitle }}</span>
               <span class="text-success">
                 {{ userRatings.challengesRating }}
               </span>
