--- a/src/@core/components/header/daily-tasks/header-daily-tasks.component.html
+++ b/src/@core/components/header/daily-tasks/header-daily-tasks.component.html
@@ -66,7 +66,7 @@
                         </span>
                       }
                       @if (!dailyTask.completed) {
-                        <span class="badge badge-glow bg-primary">
+                        <span class="badge bg-primary">
                           {{ dailyTask.progress }}/{{ dailyTask.total }}
                         </span>
                       }
