--- a/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
+++ b/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
@@ -11,7 +11,7 @@
         </td>
 
         <td>
-          <span class="badge badge-glow" [ngClass]="{
+          <span class="badge" [ngClass]="{
             'bg-success': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-danger': challenge.playerFirst.result < challenge.playerSecond.result,
             'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
@@ -29,11 +29,11 @@
         </td>
 
         <td class="text-end">
-          <span ngbTooltip="{{ 'Time' | translate }}" class="badge me-1 badge-glow bg-primary bg-primary">
+          <span ngbTooltip="{{ 'Time' | translate }}" class="badge me-1 bg-primary bg-primary">
             <kep-icon class="font-small-3" name="challenge-time"></kep-icon>
             {{ challenge.timeSeconds }}
           </span>
-          <span ngbTooltip="{{ 'Questions' | translate }}" class="badge badge-glow bg-primary bg-primary">
+          <span ngbTooltip="{{ 'Questions' | translate }}" class="badge bg-primary bg-primary">
             <kep-icon class="font-small-3" name="challenge-task"></kep-icon>
             {{ challenge.questionsCount }}
           </span>
@@ -49,7 +49,7 @@
         </td>
 
         <td>
-          <span class="badge badge-glow" [ngClass]="{
+          <span class="badge" [ngClass]="{
             'bg-danger': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-success': challenge.playerFirst.result < challenge.playerSecond.result,
             'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
@@ -68,7 +68,7 @@
 
         <td class="text-end">
           @if (!challenge.finished) {
-            <span class="badge badge-glow bg-success">
+            <span class="badge bg-success">
               {{ 'Now' | translate }}
             </span>
           }
