--- a/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.html
+++ b/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.html
@@ -4,7 +4,7 @@
       <div class="col p-0 d-flex align-items-center justify-content-center">
         <div class="d-flex justify-content-center align-items-center">
           <challenges-user-view [user]="challenge.playerFirst" [withRating]="false"/>
-          <span class="badge badge-glow ms-50" [ngClass]="{
+          <span class="badge ms-50" [ngClass]="{
             'bg-success': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-danger': challenge.playerFirst.result < challenge.playerSecond.result,
             'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
@@ -16,7 +16,7 @@
 
       <div class="col p-0 d-flex align-items-center justify-content-center">
         <div class="d-flex justify-content-center align-items-center">
-          <span class="badge badge-glow me-1" [ngClass]="{
+          <span class="badge me-1" [ngClass]="{
             'bg-danger': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-success': challenge.playerFirst.result < challenge.playerSecond.result,
             'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
