--- a/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
+++ b/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
@@ -26,7 +26,7 @@
               <contestant-view [user]="contestant" [team]="contestant.team"/>
             </td>
             <td class="text-center">
-              <span class="badge badge-glow bg-primary">
+              <span class="badge bg-primary">
                 {{ contestant.points }}
               </span>
             </td>
