--- a/src/app/modules/duels/components/problem-list-card/problem-list-card.component.html
+++ b/src/app/modules/duels/components/problem-list-card/problem-list-card.component.html
@@ -4,7 +4,7 @@
       {{ duelProblem.symbol }}. {{ duelProblem.problem.title }}
     </div>
     <div>
-      <span class="badge badge-glow bg-success">
+      <span class="badge bg-success">
         {{ duelProblem.ball }}
       </span>
     </div>
