--- a/src/app/modules/home/profile-section/profile-section.component.html
+++ b/src/app/modules/home/profile-section/profile-section.component.html
@@ -63,7 +63,7 @@
           <div class="card-body p-50">
             <div class="text-{{ userRatings.challengesRankTitle | challengesRankColor }}">
               <span
-                class="badge badge-pill badge-glow badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
+                class="badge badge-pill badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
                 {{ userRatings.challengesRankTitle }}
               </span>
               <span class="badge badge-light-{{ userRatings.challengesRankTitle | challengesRankColor }}">
