--- a/src/app/modules/lugavar/lugavar.component.html
+++ b/src/app/modules/lugavar/lugavar.component.html
@@ -1,6 +1,6 @@
 <div class="lugavar-page-top">
   <div class="text-center mt-3">
-    <div [@fadeInUpOnEnter] class="avatar badge-glow avatar-lg bg-primary p-2 avatar-rounded m-0 mb-1">
+    <div [@fadeInUpOnEnter] class="avatar avatar-lg bg-primary p-2 avatar-rounded m-0 mb-1">
       <i [data-feather]="'bookmark'" class="font-large-1"></i>
     </div>
     <h2 [@fadeInUpOnEnter] class="mt-1">
@@ -145,7 +145,7 @@
                 @for (word of selectedWords; track word) {
                   <tr>
                     <td>
-                      <span class="badge bg-primary badge-glow">
+                      <span class="badge bg-primary">
                         {{ word.word }}
                       </span>
                     </td>
