--- a/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
@@ -41,7 +41,7 @@
             }
           </div>
           <div class="card-footer text-center">
-            <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="statistics">
+            <a class="btn btn-primary bg-primary btn-sm round" routerLink="statistics">
               {{ 'DetailedStatistics' | translate }}
               <i data-feather="arrow-right"></i>
             </a>
@@ -92,7 +92,7 @@
                   <contestant-view [imgSize]="28" [user]="rating"></contestant-view>
                 </td>
                 <td class="text-center">
-                  <span class="badge bg-primary badge-glow">
+                  <span class="badge bg-primary">
                     {{ rating.solved }}
                   </span>
                 </td>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="card-footer text-center">
-        <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="rating">
+        <a class="btn btn-primary bg-primary btn-sm round" routerLink="rating">
           {{ 'OverallRating' | translate }}
           <i data-feather="arrow-right"></i>
         </a>
@@ -150,7 +150,7 @@
           </tbody>
         </table>
         <div class="card-footer text-center">
-          <button class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="attempts">
+          <button class="btn btn-primary bg-primary btn-sm round" routerLink="attempts">
             {{ 'AllAttempts' | translate }}
             <i data-feather="arrow-right"></i>
           </button>
