--- a/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
+++ b/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <div class="section-profile text-center">
-      <div class="avatar p-50 bg-primary badge-glow">
+      <div class="avatar p-50 bg-primary">
         <div class="avatar-content">
           <i [data-feather]="'problem' | iconName" [size]="20"></i>
         </div>
@@ -43,7 +43,7 @@
         @for (data of langs; track data) {
           <div class="d-flex language justify-content-between">
             <div class="lang">
-              <span class="badge badge-glow badge-{{ data.lang }}">
+              <span class="badge badge-{{ data.lang }}">
                 {{ data.langFull }}
               </span>
             </div>
