--- a/src/app/modules/users/components/user-card/user-card.component.html
+++ b/src/app/modules/users/components/user-card/user-card.component.html
@@ -52,7 +52,7 @@
           <span class="mb-0 mt-1">
             <div class="text-{{ userRatings.challengesRankTitle | challengesRankColor }}">
               <span
-                class="badge badge-pill badge-glow badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
+                class="badge badge-pill badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
                 {{ userRatings.challengesRankTitle }}
               </span>
               <span class="badge badge-light-{{ userRatings.challengesRankTitle | challengesRankColor }}">
